2017-10-03  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Modify genericListener.listeners.execute function.

	* tryXpath/scripts/try_xpath_functions.js:
	Define setAttrToItem function.
	Define setIndexToItems function.

	* tryXpath/scripts/try_xpath_content.js:
	Define attributes variable.

2017-10-02  larissa9839  <larissa9839@gmail.com>

	* tryXpath/manifest.json:
	Change version from "1.0" to "1.0.0".

	* tryXpath/scripts/try_xpath_functions.js:
	Fix getItemDetails function. This function handle Boolean type.

2017-10-01  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.js:
	Modify window load event handler. A execute message is sent when a
	user press the Enter to the some input field.

	* tryXpath/scripts/try_xpath_content.js: 
	Add the MPL 2.0 Licence header.
	Move the code which calls chrome.runtime.sendMessage.

	* tryXpath/popup/popup.js: 
	Add the MPL 2.0 Licence header.

	* tryXpath/pages/show_all_results.js: 
	Add the MPL 2.0 Licence header.

	* tryXpath/pages/options.js: 
	Add the MPL 2.0 Licence header.

	* tryXpath/background/try_xpath_background.js: 
	Add the MPL 2.0 Licence header.

	* tryXpath/scripts/try_xpath_functions.js:
	Add the MPL 2.0 Licence header.

2017-09-29  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.css:
	Set style to #open-options.

	* tryXpath/popup/popup.html:
	Add "Open options" button.

	* tryXpath/popup/popup.js:
	Modify the file. "keypress" event is used instead of "keydown"
	event.
	Modify this file. The main expression will be executed when Enter
	key is pressed.

	* tryXpath/background/try_xpath_background.js: 
	Modify genericListener.listeners.requestRestorePopupState to send
	message	even if popupState is null.
	
	* tryXpath/popup/popup.js:
	Modify genericListener.listeners.restorePopupState to handle the
	case that message.state is null.


	* tryXpath/popup/popup.html (Main):
	Remove none class.

	* tryXpath/popup/popup.js: